--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 numpy==1.20.3
-opencv-python
+opencv-python-headless
 Pillow==8.2.0
 pytesseract==0.3.7
 Werkzeug==2.0.1
